crates/biome_js_parser/tests/js_test_suite/error/ts_constructor_type_parameters.ts
class A { constructor<A>(b) {} }
class A { constructor<>(b) {} }
